🚀 4단계 - 로또(수동) (#3538)
* refactor : 피드백 반영

* docs : step4 수동구매 요구사항 추가

* feat : 수동 로또 구매 조건 추가

* feat : 수동로또 결과 출력

* docs : 요구사항 완료

* fix : 사용하지 않는 패키지, 함수 제거